welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: unclosed character literal
	if (hour<7 && hour>20 && talking=='true') 
                                               ^